# charmie11.github.io

./: codes.md  cv.md  index.md  lectures.md  personal.md  publications.md  readme.md  research.md  services.md
_data/: navigation.yml
_includes/: _navigation.html
_layouts/: page.html
cr-simulator/: README.md  app.html  app_analysis.html  app_bokeh.py  cr_circuit.py  download.js  pyproject.toml
cr-simulator/backup2025/: app_bokeh.py  cr_circuit.py  pyproject.toml
cr-simulator/backup2025/data/: discharge_data (3).xlsx  discharge_data.xlsx
cr-simulator/backup2025/scripts/: app_analysis.py  app_simulator.py
cr-simulator/backup2025/src/ccs/: cr_circuit.py
cr-simulator/ccs/: configs.csv  main.py
cr-simulator/data/: discharge_data (1).xlsx  discharge_data (2).xlsx  discharge_data (3).xlsx
cr-simulator/scripts/: app.html  app_analysis.py
cr-simulator/src/ccs/: analysis.py  cr_circuit.py  simulator_components.py
test/: CR_simulator.html  main.py  sample_data.csv
